# django_in_action

./: Pipfile  manage.py  pyproject.toml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/django_in_action/: __init__.data.json  __init__.meta.json  urls.data.json  urls.meta.json  wsgi.data.json  wsgi.meta.json
.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/myapp/: __init__.data.json  __init__.meta.json  admin.data.json  admin.meta.json  apps.data.json  apps.meta.json  models.data.json  models.meta.json
.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
django_in_action/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: urls.py  views.py
