[tool.poetry]
name = "django_in_action"
version = "0.1.0"
description = ""
authors = ["naronA <otherthan.new@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8-bugbear = "^19.8.0"
flake8 = "^3.7.9"
ipython = "^7.10.2"
isort = "^4.3.21"
jupyter = "^1.0.0"
mypy = "^0.750"
neovim = "^0.3.1"
pre-commit = "^1.20.0"
pydocstyle = "^5.0.1"
pynvim = "^0.4.0"
pytest = "^5.3.2"
django = "^3.1"
pymysql = "^0.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
